clone plsbgvideo plsbgmusic pldbgimage + js + multiselect

--- a/app/views/plsbgimages/_form.html.slim
+++ b/app/views/plsbgimages/_form.html.slim
@@ -9,10 +9,17 @@
   .field.col-md-3
     = f.label :name
     = f.text_field :name
-  .field.col-md-3
-    = f.label :device
-    = f.collection_select :device_ids, Device.all, :id, :name, {}, { :multiple => true}
-  .field.col-md-6
-    = f.label :mediafile
-    = f.collection_select :mediafile_ids, Mediafile.where(:content_id => 5).all, :id, :filename, {}, { :multiple => true}
+  .col-md-12.padt20
+    .field.col-md-3
+      - devices = {}
+      - devices = @old_order.devices.all if @old_order
+      = f.label :device
+      = collection_select :source, :device_ids, Device.all, :id, :name, {}, {:multiple => true}
+      = f.collection_select :device_ids, devices, :id, :name, {}, { :multiple => true}
+    .field.col-md-9
+      - files = {}
+      - files = @old_order.mediafiles.all if @old_order
+      = f.label :mediafile
+      = collection_select :source, :mediafile_ids, Mediafile.where(:content_id => 5).all, :id, :filename, {}, {:multiple => true}
+      = f.collection_select :mediafile_ids, files, :id, :filename, {}, { :multiple => true}
   .actions = f.submit
