--- a/app/views/orders/new.html.slim
+++ b/app/views/orders/new.html.slim
@@ -1,5 +1,6 @@
-h1 New order
+h1 = t('orders.new')
 
 == render 'form'
 
-= link_to 'Back', orders_path
+.col-md-12
+  = link_to t('std.back'), orders_path
