--- a/app/views/markets/show.html.slim
+++ b/app/views/markets/show.html.slim
@@ -53,6 +53,6 @@ p.com-md-1
       = render 'worktime_broadcastings/form'
 
 .col-md-12
-  = link_to 'Edit', edit_market_path(@market)
+  = link_to t('std.edit'), edit_market_path(@market)
   '|
-  = link_to 'Back', markets_path
+  = link_to t('std.back'), markets_path
