--- a/app/views/periods/show.html.slim
+++ b/app/views/periods/show.html.slim
@@ -8,6 +8,6 @@ p
   strong Name:
   = @period.name
 
-= link_to 'Edit', edit_period_path(@period)
+= link_to t('std.edit'), edit_period_path(@period)
 '|
-= link_to 'Back', periods_path
+= link_to t('std.back'), periods_path
