--- a/app/views/plists/show.html.slim
+++ b/app/views/plists/show.html.slim
@@ -7,6 +7,6 @@ p
   strong Mediafile:
   = @plist.mediafile
 
-= link_to 'Edit', edit_plist_path(@plist)
+= link_to t('std.edit'), edit_plist_path(@plist)
 '|
-= link_to 'Back', plists_path
+= link_to t('std.back'), plists_path
