--- a/app/views/plsbgimages/edit.html.slim
+++ b/app/views/plsbgimages/edit.html.slim
@@ -4,5 +4,5 @@ h1 Editing plsbgimage
 
 = link_to 'Show', @plsbgimage
 '|
-= link_to 'Back', plsbgimages_path
+= link_to t('std.back'), plsbgimages_path
 
