--- a/app/views/plsbgimages/index.html.slim
+++ b/app/views/plsbgimages/index.html.slim
@@ -17,6 +17,6 @@
           td.btn-group role="group"
             = link_to '', plsbgimage, class: "glyphicon glyphicon-eye-open btn btn-sm btn-default", title: t('std.show')
             = link_to '', {:controller => "plsbgimages", :action => "new", :old_id => plsbgimage.id}, :method => "get", class: "glyphicon glyphicon-copy btn btn-sm btn-success", title: 'Clone'
-          /td = link_to 'Edit', edit_plsbgimage_path(plsbgimage)
+          /td = link_to t('std.edit'), edit_plsbgimage_path(plsbgimage)
           /td = link_to 'Destroy', plsbgimage, data: {:confirm => 'Are you sure?'}, :method => :delete
 = paginate @plsbgimages
