--- a/app/views/plsbgimages/show.html.slim
+++ b/app/views/plsbgimages/show.html.slim
@@ -11,6 +11,6 @@ p
   strong Mediafiles:
   - @plsbgimage.mediafiles.each do |mediafile|
     p #{mediafile.id}. #{mediafile.filename}
-= link_to 'Edit', edit_plsbgimage_path(@plsbgimage)
+= link_to t('std.edit'), edit_plsbgimage_path(@plsbgimage)
 '|
-= link_to 'Back', plsbgimages_path
+= link_to t('std.back'), plsbgimages_path
