--- a/app/views/plsbgmusic_devices/edit.html.slim
+++ b/app/views/plsbgmusic_devices/edit.html.slim
@@ -4,5 +4,5 @@ h1 Editing plsbgmusic_device
 
 = link_to 'Show', @plsbgmusic_device
 '|
-= link_to 'Back', plsbgmusic_devices_path
+= link_to t('std.back'), plsbgmusic_devices_path
 
