--- a/app/views/plsbgmusic_devices/show.html.slim
+++ b/app/views/plsbgmusic_devices/show.html.slim
@@ -7,6 +7,6 @@ p
   strong Device:
   = @plsbgmusic_device.device
 
-= link_to 'Edit', edit_plsbgmusic_device_path(@plsbgmusic_device)
+= link_to t('std.edit'), edit_plsbgmusic_device_path(@plsbgmusic_device)
 '|
-= link_to 'Back', plsbgmusic_devices_path
+= link_to t('std.back'), plsbgmusic_devices_path
