--- a/app/views/plsbgmusic_mediafiles/index.html.slim
+++ b/app/views/plsbgmusic_mediafiles/index.html.slim
@@ -15,7 +15,7 @@ table
         td = plsbgmusic_mediafile.plsbgmusic
         td = plsbgmusic_mediafile.mediafile
         td = link_to 'Show', plsbgmusic_mediafile
-        td = link_to 'Edit', edit_plsbgmusic_mediafile_path(plsbgmusic_mediafile)
+        td = link_to t('std.edit'), edit_plsbgmusic_mediafile_path(plsbgmusic_mediafile)
         td = link_to 'Destroy', plsbgmusic_mediafile, data: {:confirm => 'Are you sure?'}, :method => :delete
 
 br
