--- a/app/views/plsbgmusic_mediafiles/show.html.slim
+++ b/app/views/plsbgmusic_mediafiles/show.html.slim
@@ -7,6 +7,6 @@ p
   strong Mediafile:
   = @plsbgmusic_mediafile.mediafile
 
-= link_to 'Edit', edit_plsbgmusic_mediafile_path(@plsbgmusic_mediafile)
+= link_to t('std.edit'), edit_plsbgmusic_mediafile_path(@plsbgmusic_mediafile)
 '|
-= link_to 'Back', plsbgmusic_mediafiles_path
+= link_to t('std.back'), plsbgmusic_mediafiles_path
