--- a/app/views/plsbgmusics/edit.html.slim
+++ b/app/views/plsbgmusics/edit.html.slim
@@ -4,5 +4,5 @@ h1 Editing plsbgmusic
 
 = link_to 'Show', @plsbgmusic
 '|
-= link_to 'Back', plsbgmusics_path
+= link_to t('std.back'), plsbgmusics_path
 
