--- a/app/views/plsbgvideos/edit.html.slim
+++ b/app/views/plsbgvideos/edit.html.slim
@@ -4,5 +4,5 @@ h1 Editing plsbgvideo
 
 = link_to 'Show', @plsbgvideo
 '|
-= link_to 'Back', plsbgvideos_path
+= link_to t('std.back'), plsbgvideos_path
 
