--- a/app/views/suborders/show.html.slim
+++ b/app/views/suborders/show.html.slim
@@ -22,6 +22,6 @@ p
   strong Stopt:
   = @suborder.stopt
 
-= link_to 'Edit', edit_suborder_path(@suborder)
+= link_to t('std.edit'), edit_suborder_path(@suborder)
 '|
-= link_to 'Back', suborders_path
+= link_to t('std.back'), suborders_path
