--- a/app/views/typeofstatuses/edit.html.slim
+++ b/app/views/typeofstatuses/edit.html.slim
@@ -4,5 +4,5 @@ h1 Editing typeofstatus
 
 = link_to 'Show', @typeofstatus
 '|
-= link_to 'Back', typeofstatuses_path
+= link_to t('std.back'), typeofstatuses_path
 
