--- a/app/views/typeoftasks/edit.html.slim
+++ b/app/views/typeoftasks/edit.html.slim
@@ -4,5 +4,5 @@ h1 Editing typeoftask
 
 = link_to 'Show', @typeoftask
 '|
-= link_to 'Back', typeoftasks_path
+= link_to t('std.back'), typeoftasks_path
 
