--- a/app/views/typeoftasks/show.html.slim
+++ b/app/views/typeoftasks/show.html.slim
@@ -7,6 +7,6 @@ p
   strong Priority:
   = @typeoftask.priority
 
-= link_to 'Edit', edit_typeoftask_path(@typeoftask)
+= link_to t('std.edit'), edit_typeoftask_path(@typeoftask)
 '|
-= link_to 'Back', typeoftasks_path
+= link_to t('std.back'), typeoftasks_path
