--- a/app/views/volsofdays/show.html.slim
+++ b/app/views/volsofdays/show.html.slim
@@ -10,6 +10,6 @@ p
   strong Market:
   = @volsofday.market
 
-= link_to 'Edit', edit_volsofday_path(@volsofday)
+= link_to t('std.edit'), edit_volsofday_path(@volsofday)
 '|
-= link_to 'Back', volsofdays_path
+= link_to t('std.back'), volsofdays_path
