--- a/app/views/worktime_broadcastings/edit.html.slim
+++ b/app/views/worktime_broadcastings/edit.html.slim
@@ -4,5 +4,5 @@ h1 Editing worktime_broadcasting
 
 = link_to 'Show', @worktime_broadcasting
 '|
-= link_to 'Back', worktime_broadcastings_path
+= link_to t('std.back'), worktime_broadcastings_path
 
