--- a/app/views/worktime_broadcastings/new.html.slim
+++ b/app/views/worktime_broadcastings/new.html.slim
@@ -2,4 +2,4 @@ h1 New worktime_broadcasting
 
 == render 'form'
 
-= link_to 'Back', worktime_broadcastings_path
+= link_to t('std.back'), worktime_broadcastings_path
