--- a/app/views/worktime_broadcastings/show.html.slim
+++ b/app/views/worktime_broadcastings/show.html.slim
@@ -13,6 +13,6 @@ p
   strong Stop:
   = @worktime_broadcasting.stop
 
-= link_to 'Edit', edit_worktime_broadcasting_path(@worktime_broadcasting)
+= link_to t('std.edit'), edit_worktime_broadcasting_path(@worktime_broadcasting)
 '|
-= link_to 'Back', worktime_broadcastings_path
+= link_to t('std.back'), worktime_broadcastings_path
