--- a/app/views/contents/index.html.slim
+++ b/app/views/contents/index.html.slim
@@ -9,7 +9,7 @@
   table.table.table-striped.table-hover.table-condensed.table-bordered
     thead
       tr
-        th Title
+        th = t('contents.thead.title')
         /th [colspan="1"]
     tbody
       - @contents.each do |content|
