--- a/app/views/devices/show.html.slim
+++ b/app/views/devices/show.html.slim
@@ -53,6 +53,6 @@ p.col-md-6
     = @device.comment
 
 .col-md-12
-  = link_to 'Edit', edit_device_path(@device)
+  = link_to t('std.edit'), edit_device_path(@device)
   '|
-  = link_to 'Back', devices_path
+  = link_to t('std.back'), devices_path
