--- a/app/views/plsbgmusic_devices/index.html.slim
+++ b/app/views/plsbgmusic_devices/index.html.slim
@@ -15,7 +15,7 @@ table
         td = plsbgmusic_device.plsbgmusic
         td = plsbgmusic_device.device
         td = link_to 'Show', plsbgmusic_device
-        td = link_to 'Edit', edit_plsbgmusic_device_path(plsbgmusic_device)
+        td = link_to t('std.edit'), edit_plsbgmusic_device_path(plsbgmusic_device)
         td = link_to 'Destroy', plsbgmusic_device, data: {:confirm => 'Are you sure?'}, :method => :delete
 
 br
