--- a/app/views/plsbgmusic_devices/new.html.slim
+++ b/app/views/plsbgmusic_devices/new.html.slim
@@ -2,4 +2,4 @@ h1 New plsbgmusic_device
 
 == render 'form'
 
-= link_to 'Back', plsbgmusic_devices_path
+= link_to t('std.back'), plsbgmusic_devices_path
