--- a/app/views/plsbgmusic_mediafiles/edit.html.slim
+++ b/app/views/plsbgmusic_mediafiles/edit.html.slim
@@ -4,5 +4,5 @@ h1 Editing plsbgmusic_mediafile
 
 = link_to 'Show', @plsbgmusic_mediafile
 '|
-= link_to 'Back', plsbgmusic_mediafiles_path
+= link_to t('std.back'), plsbgmusic_mediafiles_path
 
