--- a/app/views/plsbgmusic_mediafiles/new.html.slim
+++ b/app/views/plsbgmusic_mediafiles/new.html.slim
@@ -2,4 +2,4 @@ h1 New plsbgmusic_mediafile
 
 == render 'form'
 
-= link_to 'Back', plsbgmusic_mediafiles_path
+= link_to t('std.back'), plsbgmusic_mediafiles_path
