--- a/app/views/statuses/show.html.slim
+++ b/app/views/statuses/show.html.slim
@@ -4,6 +4,6 @@ p
   strong Name:
   = @status.name
 
-= link_to 'Edit', edit_status_path(@status)
+= link_to t('std.edit'), edit_status_path(@status)
 '|
-= link_to 'Back', statuses_path
+= link_to t('std.back'), statuses_path
