--- a/app/views/typeofstatuses/show.html.slim
+++ b/app/views/typeofstatuses/show.html.slim
@@ -7,6 +7,6 @@ p
   strong Priority:
   = @typeofstatus.priority
 
-= link_to 'Edit', edit_typeofstatus_path(@typeofstatus)
+= link_to t('std.edit'), edit_typeofstatus_path(@typeofstatus)
 '|
-= link_to 'Back', typeofstatuses_path
+= link_to t('std.back'), typeofstatuses_path
