--- a/app/views/volsofdays/edit.html.slim
+++ b/app/views/volsofdays/edit.html.slim
@@ -4,5 +4,5 @@ h1 Editing volsofday
 
 = link_to 'Show', @volsofday
 '|
-= link_to 'Back', volsofdays_path
+= link_to t('std.back'), volsofdays_path
 
