--- a/app/views/volumes/show.html.slim
+++ b/app/views/volumes/show.html.slim
@@ -13,6 +13,6 @@ p
   strong Value:
   = @volume.value
 
-= link_to 'Edit', edit_volume_path(@volume)
+= link_to t('std.edit'), edit_volume_path(@volume)
 '|
-= link_to 'Back', volumes_path
+= link_to t('std.back'), volumes_path
