--- a/app/views/markets/edit.html.slim
+++ b/app/views/markets/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing market
 
 == render 'form'
 
-= link_to 'Show', @market
+= link_to t('std.show'), @market
 '|
 = link_to t('std.back'), markets_path
 
