--- a/app/views/orders/edit.html.slim
+++ b/app/views/orders/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing order
 
 == render 'form'
 
-= link_to 'Show', @order
+= link_to t('std.show'), @order
 '|
 = link_to t('std.back'), orders_path
 
