--- a/app/views/periods/edit.html.slim
+++ b/app/views/periods/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing period
 
 == render 'form'
 
-= link_to 'Show', @period
+= link_to t('std.show'), @period
 '|
 = link_to t('std.back'), periods_path
 
