--- a/app/views/plsbgimages/edit.html.slim
+++ b/app/views/plsbgimages/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing plsbgimage
 
 == render 'form'
 
-= link_to 'Show', @plsbgimage
+= link_to t('std.show'), @plsbgimage
 '|
 = link_to t('std.back'), plsbgimages_path
 
