--- a/app/views/plsbgmusic_mediafiles/edit.html.slim
+++ b/app/views/plsbgmusic_mediafiles/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing plsbgmusic_mediafile
 
 == render 'form'
 
-= link_to 'Show', @plsbgmusic_mediafile
+= link_to t('std.show'), @plsbgmusic_mediafile
 '|
 = link_to t('std.back'), plsbgmusic_mediafiles_path
 
