--- a/app/views/plsbgmusics/edit.html.slim
+++ b/app/views/plsbgmusics/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing plsbgmusic
 
 == render 'form'
 
-= link_to 'Show', @plsbgmusic
+= link_to t('std.show'), @plsbgmusic
 '|
 = link_to t('std.back'), plsbgmusics_path
 
