--- a/app/views/statuses/edit.html.slim
+++ b/app/views/statuses/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing status
 
 == render 'form'
 
-= link_to 'Show', @status
+= link_to t('std.show'), @status
 '|
 = link_to t('std.back'), statuses_path
 
