--- a/app/views/typeoftasks/edit.html.slim
+++ b/app/views/typeoftasks/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing typeoftask
 
 == render 'form'
 
-= link_to 'Show', @typeoftask
+= link_to t('std.show'), @typeoftask
 '|
 = link_to t('std.back'), typeoftasks_path
 
