--- a/app/views/volsofdays/edit.html.slim
+++ b/app/views/volsofdays/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing volsofday
 
 == render 'form'
 
-= link_to 'Show', @volsofday
+= link_to t('std.show'), @volsofday
 '|
 = link_to t('std.back'), volsofdays_path
 
