--- a/app/views/volumes/edit.html.slim
+++ b/app/views/volumes/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing volume
 
 == render 'form'
 
-= link_to 'Show', @volume
+= link_to t('std.show'), @volume
 '|
 = link_to t('std.back'), volumes_path
 
