--- a/app/views/worktime_broadcastings/edit.html.slim
+++ b/app/views/worktime_broadcastings/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing worktime_broadcasting
 
 == render 'form'
 
-= link_to 'Show', @worktime_broadcasting
+= link_to t('std.show'), @worktime_broadcasting
 '|
 = link_to t('std.back'), worktime_broadcastings_path
 
