--- a/app/views/devices/_form.html.slim
+++ b/app/views/devices/_form.html.slim
@@ -7,23 +7,25 @@
           li = message
 
   .field.col-md-2
-    = f.label :market
+    = f.label t('devices.thead.market')
     = f.collection_select :market_id, Market.all, :id, :name, class: "col-md-12"
   .field.col-md-2
-    = f.label :name
+    = f.label t('devices.thead.name')
     = f.text_field :name, class: "col-md-12"
   .field.col-md-1
-    = f.label :ping
+    = f.label t('devices.thead.ping')
     = f.number_field :ping, value: 15, min: 1, max: 3600, class: "col-md-12"
   .field.col-md-1
-    = f.label :tzdate
+    = f.label t('devices.thead.tzdate')
     = f.number_field :tzdate, value: 7, class: "col-md-12"
   .field.col-md-1
-    = f.label :sn
+    = f.label t('devices.thead.sn')
     = f.text_field :sn, value: '0000', class: "col-md-12"
   .field
-    = f.label :active
+    = f.label t('devices.thead.active')
     = f.check_box :active, checked: true
+  .field
+    .actions = f.submit t('std.save'), class: "btn btn-md btn-success pull-right"
   .field.col-md-12.padt20.padb20
     .field.col-md-1
       = f.label :eq0, '31.25', class: "col-md-12"
@@ -57,8 +59,6 @@
       = f.number_field :eq9, value: 0, min: -12, max: 12, class: "col-md-12"
 
   .field.col-md-12
-    = f.label :comment
+    = f.label t('devices.thead.comment')
     = f.text_area :comment, class: "col-md-12"
   .field.col-md-12
-    .actions = f.submit 'Save', class: "btn btn-md btn-success pull-right"
-  br
