--- a/app/views/devices/new.html.slim
+++ b/app/views/devices/new.html.slim
@@ -1,5 +1,6 @@
-h1 New device
+h1 = t('devices.new')
 
 == render 'form'
 
-= link_to t('std.back'), devices_path
+.col-md-12
+  = link_to t('std.back'), devices_path
