--- a/app/views/plists/edit.html.slim
+++ b/app/views/plists/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing plist
 
 == render 'form'
 
-= link_to 'Show', @plist
+= link_to t('std.show'), @plist
 '|
 = link_to t('std.back'), plists_path
 
