--- a/app/views/plists/index.html.slim
+++ b/app/views/plists/index.html.slim
@@ -14,7 +14,7 @@ table.table.table-striped.table-hover.table-condensed.table-bordered
       tr
         td = plist.suborder
         td = plist.mediafile
-        td = link_to 'Show', plist
+        td = link_to t('std.show'), plist
         td = link_to t('std.edit'), edit_plist_path(plist)
         td = link_to 'Destroy', plist, data: {:confirm => 'Are you sure?'}, :method => :delete
 
