--- a/app/views/plsbgmusic_devices/edit.html.slim
+++ b/app/views/plsbgmusic_devices/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing plsbgmusic_device
 
 == render 'form'
 
-= link_to 'Show', @plsbgmusic_device
+= link_to t('std.show'), @plsbgmusic_device
 '|
 = link_to t('std.back'), plsbgmusic_devices_path
 
