--- a/app/views/plsbgvideos/edit.html.slim
+++ b/app/views/plsbgvideos/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing plsbgvideo
 
 == render 'form'
 
-= link_to 'Show', @plsbgvideo
+= link_to t('std.show'), @plsbgvideo
 '|
 = link_to t('std.back'), plsbgvideos_path
 
