--- a/app/views/suborders/edit.html.slim
+++ b/app/views/suborders/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing suborder
 
 == render 'form'
 
-= link_to 'Show', @suborder
+= link_to t('std.show'), @suborder
 '|
 = link_to t('std.back'), suborders_path
 
