--- a/app/views/suborders/index.html.slim
+++ b/app/views/suborders/index.html.slim
@@ -30,7 +30,7 @@ table.table.table-striped.table-hover.table-condensed.table-bordered
         td = suborder.stopdt
         td = suborder.startt
         td = suborder.stopt
-        td = link_to 'Show', suborder
+        td = link_to t('std.show'), suborder
         td = link_to t('std.edit'), edit_suborder_path(suborder)
         td = link_to 'Destroy', suborder, data: {:confirm => 'Are you sure?'}, :method => :delete
 
