--- a/app/views/tasks/edit.html.slim
+++ b/app/views/tasks/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing task
 
 == render 'form'
 
-= link_to 'Show', @task
+= link_to t('std.show'), @task
 '|
 = link_to t('std.back'), tasks_path
 
