--- a/app/views/typeofstatuses/edit.html.slim
+++ b/app/views/typeofstatuses/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing typeofstatus
 
 == render 'form'
 
-= link_to 'Show', @typeofstatus
+= link_to t('std.show'), @typeofstatus
 '|
 = link_to t('std.back'), typeofstatuses_path
 
