--- a/app/views/volsofdays/index.html.slim
+++ b/app/views/volsofdays/index.html.slim
@@ -18,7 +18,7 @@ table.table.table-striped.table-hover.table-condensed.table-bordered
         td = volsofday.time
         td = volsofday.value
         td = volsofday.market
-        td = link_to 'Show', volsofday
+        td = link_to t('std.show'), volsofday
         td = link_to t('std.edit'), edit_volsofday_path(volsofday)
         td = link_to 'Destroy', volsofday, data: {:confirm => 'Are you sure?'}, :method => :delete
 
