--- a/app/views/volumes/_volume.html.slim
+++ b/app/views/volumes/_volume.html.slim
@@ -8,5 +8,5 @@
             .input-group
               = f.number_field :value, min: 0, max:100, class: "form-control"
               .input-group-btn
-                = f.submit 'Save', class: "btn btn-md btn-success"
+                = f.submit t('std.save'), class: "btn btn-md btn-success"
         td.col-md-1 = link_to '', [volume.device, volume], method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove btn btn-sm btn-danger pull-right", title: t('std.destroy')
