--- a/app/views/plsbgimages/new.html.slim
+++ b/app/views/plsbgimages/new.html.slim
@@ -1,5 +1,6 @@
-h1 New plsbgimage
+h1 = t('pls.img.new')
 
 == render 'form'
 
-= link_to t('std.back'), plsbgimages_path
+.col-md-12
+  = link_to t('std.back'), plsbgimages_path
