--- a/app/views/plsbgmusics/new.html.slim
+++ b/app/views/plsbgmusics/new.html.slim
@@ -1,5 +1,6 @@
-h1 New plsbgmusic
+h1 = t('pls.music.new')
 
 == render 'form'
 
-= link_to t('std.back'), plsbgmusics_path
+.col-md-12
+  = link_to t('std.back'), plsbgmusics_path
