--- a/app/views/plsbgmusics/show.html.slim
+++ b/app/views/plsbgmusics/show.html.slim
@@ -1,16 +1,15 @@
 /p#notice = notice
 
 p
-  strong Name:
+  strong = "#{t('pls.name')}:"
   = @plsbgmusic.name
 p
-  strong Devices:
+  strong = "#{t('pls.devices')}:"
   - @plsbgmusic.devices.each do |device|
     p #{device.id}. #{device.name}
 p
-  strong Mediafiles:
+  strong = "#{t('pls.files')}:"
   - @plsbgmusic.mediafiles.each do |mediafile|
     p #{mediafile.id}. #{mediafile.filename}
-= link_to t('std.edit'), edit_plsbgmusic_path(@plsbgmusic)
-'|
+
 = link_to t('std.back'), plsbgmusics_path
