--- a/app/views/plsbgvideos/new.html.slim
+++ b/app/views/plsbgvideos/new.html.slim
@@ -1,5 +1,6 @@
-h1 New plsbgvideo
+h1 = t('pls.video.new')
 
 == render 'form'
 
-= link_to t('std.back'), plsbgvideos_path
+.col-md-12
+  = link_to t('std.back'), plsbgvideos_path
