--- a/app/views/plsbgimages/index.html.slim
+++ b/app/views/plsbgimages/index.html.slim
@@ -1,12 +1,12 @@
 .col-md-6
-  h1.col-md-8.pull-left Listing plsbgimages
-  = link_to 'New Plsbgimage', new_plsbgimage_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+  h1.col-md-8.pull-left = t('pls.i_title')
+  = link_to t('pls.i_new'), new_plsbgimage_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
   table.table.table-striped.table-hover.table-condensed.table-bordered
     thead
       tr
         th #
-        th Name
-        th Created
+        th = t('pls.name')
+        th = t('std.created')
 
     tbody
       - @plsbgimages.each do |plsbgimage|
@@ -16,7 +16,7 @@
           td = (plsbgimage.created_at + 3600 * 7).to_s[0..18]
           td.btn-group role="group"
             = link_to '', plsbgimage, class: "glyphicon glyphicon-eye-open btn btn-sm btn-default", title: t('std.show')
-            = link_to '', {:controller => "plsbgimages", :action => "new", :old_id => plsbgimage.id}, :method => "get", class: "glyphicon glyphicon-copy btn btn-sm btn-success", title: 'Clone'
+            = link_to '', {:controller => "plsbgimages", :action => "new", :old_id => plsbgimage.id}, :method => "get", class: "glyphicon glyphicon-copy btn btn-sm btn-success", title: t('std.clone')
           /td = link_to t('std.edit'), edit_plsbgimage_path(plsbgimage)
           /td = link_to 'Destroy', plsbgimage, data: {:confirm => 'Are you sure?'}, :method => :delete
 = paginate @plsbgimages
