--- a/app/views/plsbgmusics/index.html.slim
+++ b/app/views/plsbgmusics/index.html.slim
@@ -1,12 +1,12 @@
 .col-md-6
-  h1.col-md-8.pull-left Listing plsbgmusics
-  = link_to 'New Plsbgmusic', new_plsbgmusic_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
+  h1.col-md-8.pull-left = t('pls.m_title')
+  = link_to t('pls.new'), new_plsbgmusic_path, class:"glyphicon glyphicon-plus btn btn-md btn-primary pull-right"
   table.table.table-striped.table-hover.table-condensed.table-bordered
     thead
       tr
         th #
-        th Name
-        th Created
+        th = t('pls.name')
+        th = t('std.created')
 
     tbody
       - @plsbgmusics.each do |plsbgmusic|
@@ -17,7 +17,7 @@
           td = (plsbgmusic.created_at + 3600 * 7).to_s[0..18]
           td.btn-group role="group"
             = link_to '', plsbgmusic, class: "glyphicon glyphicon-eye-open btn btn-sm btn-default", title: t('std.show')
-            = link_to '', {:controller => "plsbgmusics", :action => "new", :old_id => plsbgmusic.id}, :method => "get", class: "glyphicon glyphicon-copy btn btn-sm btn-success", title: 'Clone'
+            = link_to '', {:controller => "plsbgmusics", :action => "new", :old_id => plsbgmusic.id}, :method => "get", class: "glyphicon glyphicon-copy btn btn-sm btn-success", title: t('std.clone')
           /td = link_to t('std.edit'), edit_plsbgmusic_path(plsbgmusic)
           /td = link_to 'Destroy', plsbgmusic, data: {:confirm => 'Are you sure?'}, :method => :delete
 .col-md-12 = paginate @plsbgmusics
